--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
   /* top: 0; */
   background-color: #1B3DEA;
   width: 100%;
-  max-width: 340px; /* padding으로 인해 양 옆 margin이 10px씩 늘었으므로 너비를 줄여줬습니다 */
+  max-width: 360px;
   max-height: 47px;
   margin-left: auto;
   margin-right: auto;
