--- a/src/pages/License/style.css
+++ b/src/pages/License/style.css
@@ -7,13 +7,14 @@
 .container {
   max-width: 360px;
   height: 100%;
-  margin: auto;
+  margin: 0 auto;
+  background-color: #FCFCFC;
 }
 
 .contents {
   max-width: 360px;
   height: 100vh;
-  margin: auto;
-  padding: 130px 20px 0 20px;
+  margin: 0 auto;
+  padding: 30px 20px 0 20px;
   background-color: white;
 }
