--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,3 +1,49 @@
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 47px;
+  color: white;
+  z-index: 1000; /* 헤더가 공지사항보다 위에 위치 */
+}
+
+.notice-bar {
+  position: fixed;
+  top: 47px; /* 헤더 아래에 위치 */
+  width: 100%;
+  height: 50px; /* 공지사항 높이 */
+  max-width: 360px;
+  max-height: 47px;
+  color: black;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center; /* 세로 중앙 정렬 */
+  justify-content: flex-start; /* 아이콘과 텍스트를 왼쪽으로 정렬 */
+  padding: 0 10px; /* 양쪽 여백 */
+  font-weight: bold;
+  z-index: 1001; /* 헤더보다 위로 설정 */
+}
+
+.notice-icon {
+  width: 23px; /* 아이콘 크기 */
+  margin-right: 8px; /* 아이콘과 텍스트 사이 여백 */
+}
+
+.notice-text {
+  margin-top: 3px; /* 텍스트 아래 여백 추가 (조정 필요) */
+}
+
+.notice-content {
+  flex-grow: 1; /* 남은 공간을 채워줌 */
+  white-space: nowrap; /* 줄바꿈을 하지 않음 */
+  overflow: hidden; /* 넘치는 부분 숨김 */
+  text-overflow: ellipsis; /* 넘치는 부분에 말줄임표 적용 */
+  display: block; /* 요소를 블록으로 변경하여 너비를 가질 수 있게 */
+  width: 100%; /* 전체 너비 사용 */
+  max-width: calc(100% - 50px); /* 아이콘 크기와 여백을 고려하여 최대 너비 설정 */
+}
+
 .content {
-  margin-top: 47px; /* 고정 헤더 높이 만큼 여백을 추가하여 내용이 겹치지 않도록 합니다. */
+  margin-top: 97px; /* 헤더와 공지사항 높이를 반영한 여백 */
+  padding: 10px;
 }
