feat: make Preview contents layout

--- a/src/components/Preview/style.css
+++ b/src/components/Preview/style.css
@@ -1,3 +1,27 @@
+.post-preview-container{
+
+}
+
+.preview-img-box {
+
+}
+
+.post-preview-img {
+
+}
+
+.deadline-box {
+
+}
+
+.preview-title {
+
+}
+
 .post-list-title {
-  
+
+}
+
+.post-list-container {
+
 }
