--- a/src/components/OptionBar/style.css
+++ b/src/components/OptionBar/style.css
@@ -12,7 +12,7 @@
   border-bottom: 1px solid #D9D9D9
 }
 
-.option-bar-title{
+.option-bar-title {
   text-color: #222222;
   font-size: 15px;
   margin: 18px 0 33px 0;
@@ -25,7 +25,7 @@
   justify-content: space-between;
 }
 
-.option{
+.option {
   width: 140px;
   height: 31px;
   font-size: 13px;
@@ -33,6 +33,6 @@
   text-align: center;
 }
 
-#stayingOption {
+.option:hover {
   border-bottom: 2px solid #1B3DEA;
 }
