--- a/src/pages/License/style.css
+++ b/src/pages/License/style.css
@@ -1,7 +1,21 @@
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body{
+  -ms-overflow-style: none; // 스크롤바 없애기
+  &::-webkit-scrollbar{
+    display: none;
+  }
 }
 
 .container {
@@ -13,7 +27,8 @@
 
 .contents {
   max-width: 360px;
-  height: 100vh;
+  height: 80vh;
+  overflow-y: scroll;
   margin: 0 auto;
   padding: 30px 20px 0 20px;
   background-color: white;
