--- a/src/pages/contentWrite/index.css
+++ b/src/pages/contentWrite/index.css
@@ -1,7 +1,8 @@
-h2{
+h2 {
   text-align: center;
   width: 100px;
 }
+
 .container {
   margin: auto;
 }
@@ -104,4 +105,46 @@ h2{
   border-radius: 4px;
   font-size: 16px;
   cursor: pointer;
+}
+
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  background: url(../../image/ico_calendar.svg) no-repeat;
+}
+
+.title-input {
+  width: 320px; /* 원하는 너비로 설정 */
+  font-size: 16px;
+  padding: 10px 0;
+  border: none;
+  border-bottom: 1px solid #aaa; /* 아래쪽만 선을 그음 */
+  outline: none; /* 선택 시 파란 테두리 제거 */
+  transition: border-color 0.3s;
+  background-color: transparent;
+}
+
+.title-input::placeholder {
+  color: #aaa; /* 플레이스홀더 색상 설정 */
+}
+
+.title-input:focus {
+  border-bottom: 1px solid black; /* 포커스 시 진한 선 */
+}
+
+#content{
+  resize: none;
+  width: 320px;
+  height: 300px;
+  font-size: 10px;
+  color: black;
+  padding: 5px;
+  margin: auto;
+}
+
+.margin{
+  margin: 0px 20px;
+}
+
+.margin-left{
+  margin-left: 20px;
 }
