바텀바와 메인 페이지의 배치를 전체적으로 손봤습니다

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,8 @@
 .header {
   width: 100%;
+  display: grid; /* grid 사용 */
+  height: 100vh; /* 화면 전체 높이를 사용 (선택적) */
+  justify-items: center; /* 수평 가운데 정렬 */
 }
 
 .header-2 {
