--- a/src/components/BottomBar/Footer.css
+++ b/src/components/BottomBar/Footer.css
@@ -5,6 +5,7 @@
   height: 70px;
   max-width: 360px;
   max-height: 65px;
+  min-width: 360px;
   color: white;
   border-top: 1px solid #D9D9D9;
   display: flex;
@@ -17,7 +18,8 @@
 .footer-icons {
   display: flex;
   justify-content: space-between;
-  width: 20px;
+  width: 100%; /* 전체 폭을 사용 */
+  padding: 0 10px;
 }
 
 .footer-icon {
