--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -54,7 +54,7 @@
 }
 
 .content {
-  margin-top: 97px;
+  margin-top: 57px;
   padding: 10px;
   height: calc(100vh - 147px);
 }
@@ -71,7 +71,9 @@
 }
 
 .centered-container {
-  display: grid; /* grid 사용 */
-  place-items: center; /* 수평 및 수직 가운데 정렬 */
-  height: 100vh; /* 화면 전체 높이를 사용 (선택적) */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
