--- a/src/pages/contentWrite/index.css
+++ b/src/pages/contentWrite/index.css
@@ -3,11 +3,25 @@ h2 {
   width: 100px;
 }
 
+body{
+  background-color: white;
+}
+
+.centered-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 360px;
+}
+
 .container {
+  position: fixed;
   margin: auto;
   width: 360px;
-  height: 1000px;
-
+  height: 100vh;
+  top: 88px;
+  background-color: none;
 }
 
 .back-button {
@@ -56,10 +70,7 @@ h2 {
 /* 본문 텍스트 에어리어 */
 .textarea {
   resize: none;
-}
-
-.textarea:focus{
-  border: 1px solid black;
+  border: 1px solid #888888;
   outline: none;
 }
 
@@ -87,6 +98,9 @@ h2 {
 input[type="date"]::-webkit-calendar-picker-indicator {
   background: url(../../../public/ico_calendar.svg) no-repeat;
 }
+
+input[type="date"]::-webkit-clear-button,
+input[type="date"]::-webkit-inner-spin-button,
 
 .title-input {
   width: 320px; /* 원하는 너비로 설정 */
@@ -127,10 +141,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   margin-left: 20px;
 }
 
-.margin-top{
-  margin-top: 87px;
-}
-
 .margin-top2{
   margin-top: 20px;
 }
@@ -149,4 +159,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .add-image{
   width: 60px;
   height: 60px;
+}
+
+.border{
+  border: 1px solid #888888;
+  outline: none;
+
 }
