--- a/src/components/BottomBar/Footer.css
+++ b/src/components/BottomBar/Footer.css
@@ -2,18 +2,21 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 70px;
   max-width: 360px;
-  max-height: 65px;
   min-width: 360px;
+  height: 70px;
   color: white;
   border-top: 1px solid #D9D9D9;
   display: flex;
   align-items: center; /* 세로 중앙 정렬 */
   justify-content: space-around;
-  z-index: 1000; /* 다른 요소 위에 표시 */
   background-color: white;
+  z-index: 1000;
+  margin: 0 auto; /* 가로 중앙 정렬 */
+  left: 0;
+  right: 0;
 }
+
 
 .footer-icons {
   display: flex;
