--- a/src/components/TopBar/style.css
+++ b/src/components/TopBar/style.css
@@ -1,5 +1,5 @@
 .top-bar-container {
-  width: 100%;
+  width: 360px;
   height: 40px;
   margin: 47px 0 0 0;
   background-color: white;
@@ -8,6 +8,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  position: fixed;
+  z-index: 1;
 }
 
 .top-bar-container img {
