--- a/src/pages/CategoryList/CategoryList.css
+++ b/src/pages/CategoryList/CategoryList.css
@@ -1,3 +1,11 @@
+.centered-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .Search {
   position: fixed;
   top: 47px;
@@ -27,7 +35,35 @@
   margin: 0 10px;
 }
 
-.search-text {
-  flex-grow: 1;
-  text-align: center;
+.category-buttons {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.category-button {
+  padding: 10px 20px;
+  margin: 5px;
+  font-size: 16px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.category-button.selected {
+  background-color: #1B3DEA;
+  color: white;
+  border-color: #1B3DEA;
+}
+
+.search-button {
+  padding: 10px 20px;
+  background-color: #1B3DEA;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 20px;
 }
