--- a/src/components/OptionBar/style.css
+++ b/src/components/OptionBar/style.css
@@ -12,17 +12,19 @@
 }
 
 .option-bar-container {
-  max-width: 360px;
-  height: 147px;
-  padding: 47px 20px 0 20px;
+  width: 360px;
+  height: 100px;
+  padding: 18px 20px 0 20px;
   background-color: white;
-  border-bottom: 1px solid #D9D9D9
+  border-bottom: 1px solid #D9D9D9;
+  position: fixed;
+  z-index: 1;
 }
 
 .option-bar-title {
   text-color: #222222;
   font-size: 15px;
-  margin: 18px 0 33px 0;
+  margin: 0 0 33px 0;
 }
 
 .option-wrap {
