--- a/src/components/BottomButton/style.css
+++ b/src/components/BottomButton/style.css
@@ -19,6 +19,7 @@
   width: 100%;
   height: 100px;
   background: linear-gradient(0deg, white 50%, rgba(0,0,0,0) 100%);
+  margin: 0 0 65px 0;
   display: flex;
   justify-content: center;
 }
