--- a/src/pages/License/style.css
+++ b/src/pages/License/style.css
@@ -20,7 +20,7 @@ body{
 
 .license-container {
   max-width: 360px;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
   background-color: #FCFCFC;
 }
