--- a/src/components/ContestView/style.css
+++ b/src/components/ContestView/style.css
@@ -1,4 +1,10 @@
 /* 기존 CSS 내용 유지 */
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 
 /* 필요에 따라 추가적인 스타일 조정 */
 .post-list-container {
