--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -11,12 +11,12 @@
   box-sizing: border-box;
 }
 
-.signup-page-container {
+.login-page-container {
   max-width: 360px;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items:center;
   margin: auto;
   position: relative;
 }
@@ -29,19 +29,18 @@
   background-color: #1B3DEA;
 }
 
-.signup-page-container img {
+.login-page-logo {
   width: 102.07px;
   height: 80px;
   position: absolute;
   top: 105px;
 }
 
-.signup-page-title {
-  font-size: 28px;
-  font-weight: 400;
-  color: #444444;
+.login-page-title {
+  width: 128px;
+  height: 43px;
   position: absolute;
-  top: 209px;
+  top: 199px;
 }
 
 .page-info {
@@ -50,21 +49,15 @@
   color: #444444;
   text-align: center;
   position: absolute;
-  top: 249px;
+  top: 248px;
 }
 
 .input-box-wrap {
   max-width: 287px;
-  height: 260px;
+  height: 176px;
   position: absolute;
   top: 308px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.go-to-login{
-  font-size: 14px;
-  color: #3F4142;
-  text-align: right;
 }
