--- a/src/components/InputBox/style.css
+++ b/src/components/InputBox/style.css
@@ -13,7 +13,9 @@
 
 .label {
   font-size: 16;
+  font-weight: 500;
   color: #444444;
+  margin: 0 0 4px 1px;
 }
 
 .input-box {
@@ -25,7 +27,7 @@
 }
 
 .input-box::placeholder {
-  color: #D8DBE9;
+  color: #D0d0d0;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
 }
