글쓰기 거의 완성 했습니다

--- a/src/pages/contentWrite/button.css
+++ b/src/pages/contentWrite/button.css
@@ -17,7 +17,7 @@
   width: 100%;
   max-width: 250px;
   padding: 10px;
-  background-color: #1976d2;
+  background-color: #1B3DEA;
   color: white;
   border: none;
   border-radius: 4px;
