--- a/src/components/OptionBar/style.css
+++ b/src/components/OptionBar/style.css
@@ -15,6 +15,7 @@
   width: 360px;
   height: 100px;
   padding: 18px 20px 0 20px;
+  margin-top: 47px;
   background-color: white;
   border-bottom: 1px solid #D9D9D9;
   position: fixed;
