--- a/src/pages/CategoryList/CategoryList.css
+++ b/src/pages/CategoryList/CategoryList.css
@@ -36,28 +36,30 @@
 }
 
 .category-buttons {
-  margin-top: -60px;
   display: flex;
   flex-wrap: wrap;  /* 버튼들이 줄바꿈되도록 설정 */
-  justify-content: center;  /* 버튼들을 가로로 중앙 정렬 */
+  justify-content: flex-start;  /* 버튼들을 왼쪽으로 정렬 */
   gap: 10px;  /* 버튼들 간의 간격 설정 */
   width: 100%;
 }
 
 .category-button {
-  padding: 10px 20px;
+  padding: 16px;
   font-size: 16px;
+  height: 30px;
+  border-radius: 30px; /* 테두리 곡선 크기 변경 */
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   cursor: pointer;
-  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   white-space: nowrap;
 }
 
 .category-button.selected {
-  background-color: #1B3DEA;
+  background-color: #545B82;
   color: white;
-  border-color: #1B3DEA;
 }
 
 .search-button {
