--- a/src/pages/CategoryList/CategoryList.css
+++ b/src/pages/CategoryList/CategoryList.css
@@ -1,9 +1,10 @@
 .centered-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start; /* 위쪽 정렬 */
   align-items: center;
-  height: 100vh;
+  min-height: 100vh; /* 최소 화면 높이 */
+  padding-top: 100px; /* Search 바 아래 여백 추가 */
 }
 
 .Search {
@@ -37,10 +38,11 @@
 
 .category-buttons {
   display: flex;
-  flex-wrap: wrap;  /* 버튼들이 줄바꿈되도록 설정 */
-  justify-content: flex-start;  /* 버튼들을 왼쪽으로 정렬 */
-  gap: 10px;  /* 버튼들 간의 간격 설정 */
+  flex-wrap: wrap; /* 버튼들이 줄바꿈되도록 설정 */
+  justify-content: flex-start; /* 버튼들을 왼쪽으로 정렬 */
+  gap: 10px; /* 버튼들 간의 간격 설정 */
   width: 100%;
+  padding: 0 10px; /* 카테고리 버튼들의 양옆 여백 */
 }
 
 .category-button {
@@ -71,8 +73,19 @@
   border: none;
   cursor: pointer;
   border-radius: 10px;
-  position: fixed;  /* 고정된 위치 */
-  bottom: 85px;  /* 화면 하단에서 20px 떨어지게 설정 */
-  left: 50%;  /* 수평 중앙에 배치 */
-  transform: translateX(-50%);  /* 수평 중앙 정렬을 위한 보정 */
+  position: fixed; /* 고정된 위치 */
+  bottom: 85px; /* 화면 하단에서 20px 떨어지게 설정 */
+  left: 50%; /* 수평 중앙에 배치 */
+  transform: translateX(-50%); /* 수평 중앙 정렬을 위한 보정 */
+}
+
+.category-title {
+  margin-top: 30px;
+  margin-left: 25px;
+  font-size: 25px;
+  font-weight: 550;
+  color: #333;
+  margin-bottom: 12px;
+  text-align: left;
+  width: 100%;
 }
