--- a/src/components/ApplyButton/style.css
+++ b/src/components/ApplyButton/style.css
@@ -11,5 +11,13 @@
   box-sizing: border-box;
 }
 
-.song-apply-container {
+.apply-button {
+  width: 60px;
+  height: 24px;
+  text-align: center;
+  background-color: white;
+  color: #1B3DEA;
+  font-size: 11px;
+  border-radius: 4px;
+  border: 0.5px solid #1B3DEA;
 }
