feat :: apply page 끝

--- a/src/components/ApplyDetail/style.css
+++ b/src/components/ApplyDetail/style.css
@@ -21,6 +21,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 22px 18px 30px 18px;
+  margin: 107px 0 0 0;
 }
 
 .apply-detail-wrap {
