--- a/src/pages/StoryApply/style.css
+++ b/src/pages/StoryApply/style.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 }
 
-.song-apply-container {
+.story-apply-container {
   max-width: 360px;
   height: 100vh;
   margin: auto;
