--- a/src/components/PostDetail/style.css
+++ b/src/components/PostDetail/style.css
@@ -15,6 +15,7 @@
   max-width: 360px;
   height: auto;
   margin: 0 auto;
+  padding-bottom: 165px;
   background-color: #FCFCFC;
   position: relative; /* bottom bottom 배치 떄문에 */
   display: flex;
@@ -45,7 +46,7 @@
 }
 
 .post-detail-img-wrap img {
-  width: 320px;
+  width: 100%;
   height: 200px;
 }
 
@@ -102,4 +103,5 @@
   color: #444444;
   font-size: 16px;
   font-weight: 400;
+  word-break:break-all;
 }
