--- a/src/pages/Studenets/style.css
+++ b/src/pages/Studenets/style.css
@@ -11,25 +11,19 @@
   box-sizing: border-box;
 }
 
-body{
-  -ms-overflow-style: none; // 스크롤바 없애기
-  &::-webkit-scrollbar{
-    display: none;
-  }
-}
-
-.license-container {
+.students-page-container {
   max-width: 360px;
   height: 100vh;
   margin: 0 auto;
-  background-color: #FCFCFC;
+  background-color: #F2F2F2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.license-contents {
-  max-width: 360px;
+.students-content-wrap {
+  width: 320px;
   height: 100%;
+  padding: 147px 0 85px 0;
   overflow-y: scroll;
-  margin: 0 auto;
-  padding: 167px 20px 85px 20px;
-  background-color: white;
 }
