--- a/src/components/OptionBar/style.css
+++ b/src/components/OptionBar/style.css
@@ -11,15 +11,20 @@
   box-sizing: border-box;
 }
 
+/* OptionBar의 컨테이너 */
 .option-bar-container {
-  width: 360px;
+  width: 360px; /* 고정된 너비 */
   height: 100px;
   padding: 18px 20px 0 20px;
   margin-top: 47px;
+  margin-left: auto; /* 자동으로 왼쪽 여백 */
+  margin-right: auto; /* 자동으로 오른쪽 여백 */
   background-color: white;
   border-bottom: 1px solid #D9D9D9;
   position: fixed;
   z-index: 1;
+  left: 0;
+  right: 0;
 }
 
 .option-bar-title {
@@ -29,7 +34,7 @@
 }
 
 .option-wrap {
-  max-width: 360;
+  max-width: 360px;
   height: 31px;
   display: flex;
   justify-content: space-between;
