--- a/src/pages/Volunteer/volunteer.css
+++ b/src/pages/Volunteer/volunteer.css
@@ -1,33 +1,36 @@
-/* 카테고리 버튼 컨테이너 */
-.category-button-v-container {
-  position: sticky;
-  top: 145px;
-  z-index: 100; /* 다른 요소 위에 표시 */
-  margin: 0;
-  display: flex;
-  gap: 10px;
-  padding: 7px; /* 내부 여백 */
-  padding-left: 13px;
-  background-color: white;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
-}
-
+/* 전체 컨테이너 */
 .volunteer-container {
   max-width: 360px;
-  height: 100vh;
   margin: 0 auto;
   background-color: #F2F2F2;
+  height: 100vh;
+  overflow-y: auto;
+  padding-top: 47px;
 }
 
-.license-contents {
-  max-width: 360px;
-  height: 100%;
-  overflow-y: scroll;
+.option-bar-wrapper {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 110;
+  background-color: white;
+}
+
+/* 카테고리 버튼 컨테이너 */
+.category-button-v-container {
+  width: 360px;
+  position: fixed;
+  top: 147px;
+  z-index: 100;
+  display: flex;
+  gap: 10px;
+  padding: 7px;
+  padding-left: 13px;
+  background-color: white;
 }
 
 /* 카테고리 버튼 */
 .category-button-v {
-  max-width: 360px;
   padding: 6px 13px 5px;
   border: 1px solid #888888;
   border-radius: 20px;
@@ -41,4 +44,9 @@
   background-color: #545B82;
   color: white;
   border-color: #545B82;
+}
+
+/* 봉사활동 리스트 */
+.volunteer-items-list {
+  margin-top: 170px;
 }
