--- a/src/components/volunteerItem/style.css
+++ b/src/components/volunteerItem/style.css
@@ -1,13 +1,35 @@
 /* 컨테이너 스타일 */
 .volunteer-item-container {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 15px;
   padding: 10px;
   border-bottom: 1px solid #D9D9D9;
   background-color: #fff;
-  max-width: 600px;
-  margin-bottom: 15px;
+  max-width: 360px;
+  height: 100px;
+  margin-bottom: 10px;
+}
+
+/* 제목 스타일 */
+.title {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+/* 내용 요약 스타일 */
+.summary {
+  font-size: 11px;
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 /* 포스터 컨테이너 */
@@ -32,5 +54,5 @@
 .default-poster {
   width: 100%;
   height: 100%;
-  background-image: url('public/imsi-background.svg'); /* 기본 포스터 배경 */
+  background-image: url('public/imsi-background.svg');
 }
