--- a/src/pages/Volunteer/volunteer.css
+++ b/src/pages/Volunteer/volunteer.css
@@ -5,7 +5,7 @@
   background-color: #F2F2F2;
   height: 100vh;
   overflow-y: auto;
-  padding-top: 47px;
+  padding-top: 40px;
 }
 
 .option-bar-wrapper {
@@ -49,4 +49,48 @@
 /* 봉사활동 리스트 */
 .volunteer-items-list {
   margin-top: 170px;
+}
+
+
+.volunteer-item-container {
+  margin-bottom: 10px;
+  background-color: white;
+  overflow: hidden;
+}
+
+.poster-container {
+  position: relative;
+  height: 150px;
+}
+
+.poster-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.default-poster {
+  width: 100%;
+  height: 100%;
+}
+
+.content-container {
+  padding: 10px;
+}
+
+.title {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.preview-content {
+  font-size: 11px;
+  line-height: 1.2; /* 줄 간격 조정 */
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* 최대 2줄 */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all; /* 긴 단어 줄바꿈 */
+  color: #888888;
 }
