--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -73,5 +73,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 110vh;
+  background-color: #FCFCFC;
 }
