--- a/src/components/ContestView/style.css
+++ b/src/components/ContestView/style.css
@@ -1,4 +1,4 @@
-/* 기존 CSS 내용 유지 */
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
@@ -6,19 +6,61 @@
   font-style: normal;
 }
 
-/* 필요에 따라 추가적인 스타일 조정 */
+body{
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar{
+    display: none;
+  }
+}
+
+.post-preview-container{
+  max-width: 150px;
+  height: 130px;
+  margin: 0 20px 0 0;
+}
+
+.preview-img-box {
+  position: relative;
+}
+
+.preview-img img{ 
+  width: 150px;
+  height: 94px;
+}
+
+.deadline-box {
+  position: absolute;
+  top: 7px;
+  left: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 28px;
+  height: 15px;
+  border-radius: 10px;
+  background-color: #1B3DEA;
+  font-size: 8px;
+  font-weight: 500;
+  color: white;
+}
+
+.preview-title {
+  font-size: 12px;
+  color: #444444;
+}
+
+.post-list-title {
+  font-size: 20px;
+  font-weight: 500;
+  color: #222222;
+}
+
 .post-list-container {
   display: flex;
-  flex-direction: column; /* 열 방향으로 배치 */
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 320px;
   height: 280px;
-  overflow-x: scroll; /* 가로 스크롤 활성화 */
-}
-
-.post-preview-container {
-  max-width: 150px;
-  height: auto; /* 높이를 자동으로 조정 */
-  margin: 0 20px 10px 0; /* 아래 여백 추가 */
+  overflow-x: scroll;
 }
