--- a/src/pages/contentWrite/index.css
+++ b/src/pages/contentWrite/index.css
@@ -200,6 +200,7 @@ input[type="date"]::-webkit-inner-spin-button,
   width: 60px;
   height: 60px;
   border: none;
+  
 }
 
 .border{
@@ -265,18 +266,19 @@ select{
 }
 
 imageWrap{
-  width: 360px;
-  height: 100px;
+  width: 100%;
+  padding: 0 12px;
+  box-sizing: border-box;
 }
 
-.fileItem {
-  width: 100%;
-  height: 64px;
+.imageItem {
+  width: 60px;
+  height: 60px;
   background-color: #F1F1F1;
   padding: 10px;
-  display: flex;
+  margin-left: 10px;
+  display: block;
   align-items: center;
-  margin-bottom: 12px;
   & > div:first-child {
     flex: 1;
     height: 100%;
@@ -284,19 +286,19 @@ imageWrap{
     flex-direction: column;
     justify-content: center;
     gap: 8px;
-    & > p:first-child {
-      font-size: 16px;
+    & > p{
+      font-size: 5px;
       font-family: 600;
     }
-    & > p:last-child {
-      font-size: 12px;
+    & > img{
+      font-size: 5px;
       font-family: 400;
       color: gray;
     }
   }
   & > div:last-child {
-    width: 32px;
-    height: 32px;
+    width: 15px;
+    height: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -308,4 +310,10 @@ imageWrap{
       transform: rotateX(45deg);
     }
   }
+}
+
+.image{
+  display: flex;
+  margin-left: 20px;
+  margin-top: 20px;
 }
