fix :: 데드라인 형식 수정

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -28,7 +28,7 @@
   display: inline-block;
 }
 
-.left, .right {
+.left {
   padding: 7.5px 10px;
 }
 
@@ -42,4 +42,10 @@
 
 .right {
   margin-left: auto;
+}
+
+.profile{
+  width: 100%;
+  height: 100%;
+  padding: 7.5px 10px;
 }
