--- a/src/components/CategoryButton/style.css
+++ b/src/components/CategoryButton/style.css
@@ -1,7 +1,42 @@
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .category-box {
-  width: 
+  position: relative;
+  min-width: 50px;
+  height: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1.2px solid white;
+  border-radius: 24px;
+  background-color: rgba(255,255,255,0.35);
+  padding: 6px 12px;
+  margin: 2px 0 0 3px;
+  font-size: 14px;
+  color: white;
 }
 
 .category-delete {
-
+  position: absolute;
+  top: -2px;
+  right: -3px;
+  width: 12px;
+  height: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 50%;
+  background-color: #6B81F1;
 }
