--- a/src/components/SearchBox/style.css
+++ b/src/components/SearchBox/style.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
@@ -34,5 +34,69 @@
 }
 
 .search-box-margin{
+  height: 100px;
+} */
+
+.category-box {
+  position: relative;
+  min-width: 50px;
+  height: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1.2px solid white;
+  border-radius: 24px;
+  background-color: rgba(255,255,255,0.35);
+  padding: 6px 12px;
+  margin: 2px 0 0 3px;
+  font-size: 14px;
+  color: white;
+}
+
+.category-delete {
+  position: absolute;
+  top: -2px;
+  right: -3px;
+  width: 12px;
+  height: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 50%;
+  background-color: #6B81F1;
+}
+
+.categories-wrap {
+  width: 280px;
+  height: 30px;
+  display: flex;
+  margin-bottom: 20px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.categories-wrap::-webkit-scrollbar {
+  display: none;
+}
+
+.search-box-container {
+  min-width: 360px;
+  min-height: 94px;
+  margin-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #1B3DEA;
+  margin-bottom: 20px;
+  position: absolute;
+  top: 46px;
+  z-index: 4;
+}
+
+.search-box-margin {
   height: 100px;
 }
