feat :: 선생님 페이지 글쓰기 버튼 만들었음

--- a/src/pages/License/style.css
+++ b/src/pages/License/style.css
@@ -32,3 +32,10 @@ body{
   padding: 167px 20px 85px 20px;
   background-color: #FCFCFC;
 }
+
+.write-button-wrap {
+  margin: auto;
+  max-width: 360px;
+  height: 100vh;
+  position:relative;
+}
