--- a/src/pages/Studenets/style.css
+++ b/src/pages/Studenets/style.css
@@ -27,3 +27,10 @@
   padding: 147px 0 85px 0;
   overflow-y: scroll;
 }
+
+.write-button-wrap {
+  margin: auto;
+  max-width: 360px;
+  height: 100vh;
+  position:relative;
+}
